tests/paczka1/fuzzy1/89398286.err
Error in line 2: MmyLtvwSpbb A395 77,7
Error in line 7: pfJsO6 A797 5,8
Error in line 12: MmyLtvwSpbb A797 42,7
Error in line 10: koVpVyV S376 87,7
Error in line 11: YoCz A797 37,4
Error in line 13: pfJsO6 A395 71,7
Error in line 18: YoCz A514 49,6
Error in line 26: 1nKBM A395 80,5
Error in line 36: pfJsO6 A797 89,0
